ACS-6920 Fix PMD issues + IT test [ags]